# basic_digital_modulator

./: .gitignore  CMakeLists.txt  Makefile  README.md
data/: generated_bits.txt
include/: boxmuller.h  channel.h  cli.h  config.h  datatypes.h  modulation.h  output.h  utils.h
src/: boxmuller.c  channel.c  cli.c  config.c  modulation.c  output.c  simulator.c  utils.c
test/: Testchannel.c  Testconfig.c  Testmodulation.c
